# transfermarkt-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
tfscrap/: load.py
tfscrap/sql/: schema.sql
