[project]
name = "tfscrap"
version = "0.1.0"
description = "Cleanroom Transfermarkt scraper for SME0829 (ICMC-USP)"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.11",
    "python-dateutil>=2.9",
]

[project.scripts]
tfscrap = "tfscrap.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tfscrap", "tfscrap.spiders"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
